[package]
name = "uvls"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
itertools = "0.10.5"
tree-sitter = "0.20.8"
tree-sitter-traversal = "0.1.2"
dashmap = "5.4.0"
tower-lsp = "0.17.0"
tokio = { version = "1", features = ["full"] }
ropey = "1.5.0"
flexi_logger = { version = "0.24", features = ["async", "specfile", "compress"] }
log = "0.4"
im = "15.1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
fuzzy-matcher = "0.3.7"
pathdiff = "0.2.1"
futures = "0.3.24"
stacker = "0.1.15"
strsim = "0.10.0"
min-max-heap = "1.3.0"
compact_str = "0.6.1"
ustr = "0.9.0"
notify = "5.0.0"
pathfinding = "3.0.14"
petgraph-graphml = "3.0.0"
log-panics = "2.1.0"
tokio-util = "0.7.4"
rayon = "1.6.0"
serde_json = "1.0"
walkdir = "2"
tree-sitter-uvl = {git="https://codeberg.org/caradhras/tree-sitter-uvl"}
halfbrown = "0.1.18"
enum-kinds = "0.5.1"
num_cpus = "1.15.0"
hashbrown = "0.13.2"
regex = "1"

