[package]
name = "uvls"
version = "0.1.7"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
indexmap = "1.9.2"
petgraph = "0.6.2"
itertools = "0.10.5"
tree-sitter = "0.20.9"
tree-sitter-traversal = "0.1.2"
dashmap = "5.4.0"
tower-lsp = "0.19.0"
tokio = { version = "1", features = ["full"] }
ropey = "1.5.0"
flexi_logger = { version = "0.24", features = ["async", "specfile", "compress"] }
log = "0.4"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
fuzzy-matcher = "0.3.7"
pathdiff = "0.2.1"
enum-kinds = "0.5.1"
futures = "0.3.24"
stacker = "0.1.15"
strsim = "0.10.0"
min-max-heap = "1.3.0"
compact_str = "0.6.1"
ustr = {version = "0.9.0",features = ["serialization"]}
pathfinding = "3.0.14"
log-panics = {version = "2.1.0", features=["with-backtrace"]}
tokio-util = "0.7.4"
serde_json = "1.0"
walkdir = "2"
tree-sitter-uvl = {path="../tree-sitter-uvl"}
tree-sitter-json = {git="https://github.com/tree-sitter/tree-sitter-json"}
hashbrown = "0.13.2"
regex = "1"
axum = {version = "0.6.6", features = ["ws"]}
dioxus = { version = "*" }
dioxus-liveview = { version = "*", features = ["axum"] }
serde = "1.0.152"
enumflags2 = "0.7.5"
get-port = "4.0.0"
open = "4.0.1"
nom = "7.1.3"
percent-encoding = "2.2.0"
html-escape = "0.2.13"
